--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}
-spring.datasource.username=${DBUSERNAME}
-spring.datasource.password=${DBPASSWORD}
+#spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net:3306/heroku_c0cf1282757dd8c
+spring.datasource.username=bbbf428ce540b5
+spring.datasource.password=ab53a8f1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
